log_output/manifests/logserver-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: log-server-svc
spec:
  type: ClusterIP
  selector:
    app: log-output    # This is the app as declared in the deployment.
  ports:
    - port: 2507        # This is the port that the service will expose.
      protocol: TCP
      targetPort: 8001  # This is the target port
