log_output/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: log-output-svc
spec:
  type: ClusterIP
  selector:
    app: log-output     # This is the app as declared in the deployment.
  ports:
    - port: 2506        # This is the port that the service will expose.
      protocol: TCP
      targetPort: 8000  # This is the target port
